<?xml version="1.0" encoding="utf-8"?><!--
  ownCloud Android client application

  @author David A. Velasco
  Copyright (C) 2015 ownCloud Inc.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shareScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.owncloud.android.com.telkomsigma.android.ui.fragment.EditShareFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editShareTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:padding="@dimen/standard_padding"
            android:singleLine="true"
            android:text="@string/share_with_edit_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <View
            android:id="@+id/share_header_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_share_layout_view_height"
            android:background="@color/primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/canEditSwitch"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/standard_half_margin"
                android:text="@string/share_privilege_can_edit"
                android:textColor="@color/color_accent" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/canEditCreateCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_privilege_can_edit_create"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/canEditChangeCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_privilege_can_edit_change"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/canEditDeleteCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_privilege_can_edit_delete"
                android:visibility="gone" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/canShareSwitch"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/standard_half_margin"
                android:text="@string/share_privilege_can_share"
                android:textColor="@color/color_accent" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>